EXTRA_DIST = \
	alpha132.txt \
	alpha133.txt \
	alpha134.txt \
	alpha135.txt \
	alpha136.txt \
	alpha137.txt \
	alpha137b.txt \
	alpha138.txt \
	alpha139.txt \
	alpha140.txt \
	alpha141.txt \
	alpha142.txt \
	alpha143.txt \
	alpha144.txt \
	alpha145.txt \
	alpha146.txt \
	alpha147.txt \
	alpha148.txt \
	alpha149.txt \
	alpha150.txt \
	alpha151.txt \
	alpha152.txt \
	alpha153.txt
