add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ACU_Persistent)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ACU_Theory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AU_Persistent)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AU_Theory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/BuiltIn)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Core)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CUI_Theory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FreeTheory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FullCompiler)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Higher)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Interface)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/IO_Stuff)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Main)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Meta)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Mixfix)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NA_Theory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ObjectSystem)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Parser)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/S_Theory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/SMT)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/StrategyLanguage)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Temporal)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Utility)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Variable)
