SUBDIRS = \
	3rdParty \
	Utility \
	Temporal \
	Interface \
	Core \
	Variable \
	NA_Theory \
	ACU_Persistent \
	ACU_Theory \
	AU_Persistent \
	AU_Theory \
	CUI_Theory \
	S_Theory \
	FreeTheory \
	Higher \
	BuiltIn \
	IO_Stuff \
	ObjectSystem \
	Meta \
	FullCompiler \
	MSCP10 \
	StrategyLanguage \
	Mixfix \
	Main
