SUBDIRS = \
	3rdParty \
	Utility \
	Parser \
	Temporal \
	Interface \
	Core \
	Variable \
	NA_Theory \
	ACU_Persistent \
	ACU_Theory \
	AU_Persistent \
	AU_Theory \
	CUI_Theory \
	S_Theory \
	FreeTheory \
	Higher \
	BuiltIn \
	IO_Stuff \
	ObjectSystem \
	Meta \
	FullCompiler \
	StrategyLanguage \
	Mixfix \
	SMT \
	Main
